<resources>
    <string name="app_name">Farmer Fresh</string>
    <!--    splash screen -->
    <string name="splash_title_1">Farmer</string>
    <string name="splash_title_2">Fresh</string>
    <string name="splash_subtitle_1">Reap,</string>
    <string name="splash_subtitle_2">What You</string>
    <string name="splash_subtitle_3">Sow!</string>
    <string name="splash_image1_description">splash screen background</string>
    <string name="splash_image2_description">logo</string>

    <!--on boarding screen-->
    <string name="onBoarding_title">FarmerFresh helps you to :</string>
    <string name="onBoarding_firstPage_text">Browse variety of fresh products</string>
    <string name="onBoarding_firstPageDescription_text">You can browse the variety of fresh products and can find the farm most closest to your location</string>
    <string name="onBoarding_secondPage_text">Get the authenticated products</string>
    <string name="onBoarding_secondPageDescription_text">You are assured to get 100% authenticated pure and fresh organic products from the farms of the registered farmers.</string>
    <string name="onBoarding_thirdPage_text">Get your order at your doorsteps</string>
    <string name="onBoarding_thirdPageDescription_text">You can order the most suitable product from the convenience of your home and get the order right at your doorsteps. We value your time the most.</string>
    <string name="onBoarding_image">illustration</string>
    <string name="onBoarding_button_next">Next</string>
    <string name="onBoarding_button_start">Start</string>

    <string name="welcome">Welcome</string>
    <string name="title_activity_auth">Auth</string>
    <string name="tab_text_1"><b>Sign In</b></string>
    <string name="tab_text_2"><b>Sign Up</b></string>
    <string name="google_button">Sign in with Google</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="password_confirm_hint">Confirm Password</string>

    <!-- Tab Title -->
    <string name="tab_home">Home</string>
    <string name="tab_orders">Orders</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_cart">Cart</string>

    <!-- Home Screen-->
    <string name="search">Search</string>
    <string name="home_heading">Farms Around You:</string>
    <string name="home_description">Here is the list of your farms most near to your location.  You can search the farm and can browse their products for order.</string>


    <!-- Orders Screen -->
    <string name="pending_tab">Pending</string>
    <string name="completed_tab">Completed</string>
    <string name="order_summary">Order Summary</string>
    <string name="payment_info">Payment Information</string>
    <string name="total">Total</string>
    <string name="orders_title">List Of Orders</string>

    <!-- Product List Screen -->
    <string name="product_heading">The best products we serve:</string>

    <!-- Cart List Screen -->
    <string name="cart_heading">Your Items in Cart:</string>

    <string name="product_desc">Product Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hurray">Hurray!</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="your_order_has_been_confirmed">Your order has been confirmed</string>
    <string name="order_placed">Order Placed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->


</resources>