<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.super7.farmerfresh.ui.home.HomeFragment"
        android:label="@string/tab_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.super7.farmerfresh.ui.order.OrderFragment"
        android:label="@string/tab_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.super7.farmerfresh.ui.notifications.NotificationsFragment"
        android:label="@string/tab_profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>