<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_white">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_splash"
        tools:srcCompat="@drawable/ic_splash" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/splash_logo_height"
        android:layout_height="@dimen/splash_logo_width"
        android:layout_marginStart="32dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:srcCompat="@drawable/ic_launcher_foreground" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <TextView
            android:id="@+id/subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/splash_title_1"
            android:textAlignment="textEnd"
            android:textColor="@color/Pri_Green_1"
            android:textSize="@dimen/size_h1" />

        <TextView
            android:id="@+id/subtitle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/splash_title_2"
            android:textColor="@color/Pri_Green_2"
            android:textSize="@dimen/size_h1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="284dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/splash_subtitle_1"
            android:textAlignment="viewEnd"
            android:textColor="@color/Pri_Green_2"
            android:textSize="@dimen/size_h2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/splash_subtitle_2"
            android:textAlignment="center"
            android:textColor="@color/Sec_black_2"
            android:textSize="@dimen/size_h2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/splash_subtitle_3"
            android:textAlignment="viewStart"
            android:textColor="@color/Sec_orange"
            android:textSize="@dimen/size_h2" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>