<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_cons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.cart.ActivityConfirmationOrder">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/doodle_order"
        tools:layout_editor_absoluteX="30dp" />

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Pri_Green_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/farm_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/icon_size"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/order_placed"
            android:textColor="@color/back_white"
            android:textSize="@dimen/size_h1"
            android:textStyle="bold" />

    </Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <!--    <ImageView-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="match_parent"-->
        <!--        android:src="@drawable/ic_splash"-->
        <!--        />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_vertical|center"
            android:text="@string/hurray"
            android:textColor="@color/Pri_Green_2"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_vertical|center"
            android:text="@string/your_order_has_been_confirmed"
            android:textColor="@color/Sec_black"
            android:textSize="25sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/orderId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|center"
            android:textSize="25sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/continueShopping"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:text="@string/continue_shopping" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>